# volt

./: .gitignore  Agents.md  Cargo.toml  LICENSE  MARKDOWN_GRAMMAR_ANALYSIS.md  README.md  render_diff.txt  test.md  todo.md  todos.db
.codex/: hooks.json
.github/: copilot-instructions.md
.github/agents/: theme-architect.agent.md
.github/workflows/: ci.yml  release.yml
crates/editor-buffer/: Cargo.toml
crates/editor-buffer/src/: lib.rs
crates/editor-core/: Cargo.toml
crates/editor-core/src/: hooks.rs  keymaps.rs  lib.rs  model.rs  sections.rs
crates/editor-dap/: Cargo.toml
crates/editor-dap/src/: lib.rs
crates/editor-fs/: Cargo.toml
crates/editor-fs/src/: lib.rs
crates/editor-git/: Cargo.toml
crates/editor-git/src/: lib.rs
crates/editor-icons/: Cargo.toml  build.rs
crates/editor-icons/nerd_font_symbols/: mod.rs
crates/editor-icons/src/: lib.rs
crates/editor-jobs/: Cargo.toml
crates/editor-jobs/src/: lib.rs
crates/editor-lsp/: Cargo.toml
crates/editor-lsp/src/: client.rs  lib.rs
crates/editor-path/: Cargo.toml
crates/editor-path/src/: lib.rs
crates/editor-picker/: Cargo.toml
crates/editor-picker/src/: lib.rs
crates/editor-plugin-api/: Cargo.toml
crates/editor-plugin-api/src/: lib.rs
crates/editor-plugin-host/: Cargo.toml
crates/editor-plugin-host/src/: lib.rs
crates/editor-render/: Cargo.toml
crates/editor-render/src/: lib.rs
crates/editor-sdl/: Cargo.toml
crates/editor-sdl/src/: browser_host.rs  config.rs  lib.rs  shell.rs  state.rs  tests.rs  window_effects.rs
crates/editor-sdl/src/shell/: acp.rs  browser.rs  clipboard.rs  command_line.rs  command_stream.rs  diagnostics.rs  directory.rs  git.rs  mod.rs  pdf.rs  picker.rs  render.rs  render_utils.rs  terminal.rs  tests.rs  treesitter_install.rs  ui_overlays.rs  workspace_search.rs
crates/editor-syntax/: Cargo.toml
crates/editor-syntax/src/: lib.rs
crates/editor-syntax/tests/: corpus_inventory.rs  registered_queries.rs
crates/editor-terminal/: Cargo.toml
crates/editor-terminal/src/: lib.rs
crates/editor-theme/: Cargo.toml
crates/editor-theme/src/: lib.rs
crates/volt/: Cargo.toml  build.rs
crates/volt/assets/grammars/queries/latex/: highlights.scm
crates/volt/assets/grammars/queries/markdown-inline/: highlights.scm
crates/volt/assets/grammars/queries/razor/: highlights.scm  injections.scm
crates/volt/assets/grammars/queries/typst/: highlights.scm
crates/volt/assets/grammars/queries/vimdoc/: highlights.scm
crates/volt/src/: main.rs  process_supervisor.rs  standalone_user.rs  standalone_user_manifest.rs
docs/: architecture-diagram.html  changelog.html  index.html  language.html  script.js  styles.css  user-packages.html  user-packages.md
graphify-out/: .graphify_root  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md
release-assets-test/bundle-root/user/: Cargo.toml  acp.rs  browser.rs  buffer.rs  dap.rs  git.rs  gitfringe.rs  hover.rs  interactive.rs  lib.rs  oil.rs  picker.rs  statusline.rs  terminal.rs  theme.rs  vim.rs
release-assets-test/bundle-root/user/lang/: csharp.rs  json.rs  markdown.rs  toml.rs  typescript.rs  web_queries.rs
release-assets-test/bundle-root/user/nerd_font_symbols/: mod.rs
release-assets-test/bundle-root/user/sdk/: Cargo.toml
release-assets-test/bundle-root/user/themes/: gruvbox-light.toml  volt-dark.toml
user/: Cargo.toml  Makefile  README.md  acp.rs  autocomplete.rs  browser.rs  buffer.rs  build.rs  build_output.rs  calculator.rs  commandline.rs  compile.rs  dap.rs  git.rs  gitfringe.rs  hover.rs  icon_font.rs  image.rs  interactive.rs  lib.rs  ligatures.rs  lsp.rs  multicursor.rs  nerd_font.rs  oil.rs  pane.rs  pdf.rs  picker.rs  statusline.rs  terminal.rs  theme.rs  treesitter.rs  treesitter_context.rs  treesittercontext_ghosttext.rs  treesittercontext_headerline.rs  treesittercontext_shared.rs  undotree.rs  vim.rs  workspace.rs
user/lang/: bash.rs  c.rs  clojure.rs  cmake.rs  common.rs  cpp.rs  css.rs  diff.rs  elixir.rs  extra.rs  gitcommit.rs  go.rs  graphql.rs  hcl.rs  html.rs  java.rs  javascript.rs  json.rs  kotlin.rs  latex.rs  lua.rs  make.rs  markdown.rs  mod.rs  nix.rs  odin.rs  perl.rs  php.rs  proto.rs  python.rs  r.rs  razor.rs  ruby.rs  rust.rs  scala.rs  scss.rs  simple.rs  solidity.rs  sql.rs  swift.rs  (+6 more)
user/nerd_font_symbols/: mod.rs
user/sdk/: Cargo.toml
user/sdk/src/: abi.rs  lib.rs  treesitter.rs
user/themes/: global.toml  gruvbox-dark.toml  gruvbox-light.toml  rosepine-dark.toml  volt-dark.toml  volt-light.toml  vscode-dark.toml  vscode-light.toml
xtask/: Cargo.toml
xtask/src/: main.rs
