[package]
name = "volt-user"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "user"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
editor-core = { path = "../crates/editor-core" }
editor-dap = { path = "../crates/editor-dap" }
editor-fs = { path = "../crates/editor-fs" }
editor-git = { path = "../crates/editor-git" }
editor-icons = { path = "../crates/editor-icons" }
editor-lsp = { path = "../crates/editor-lsp" }
editor-plugin-api = { path = "../crates/editor-plugin-api" }
editor-plugin-host = { path = "../crates/editor-plugin-host" }
editor-syntax = { path = "../crates/editor-syntax" }
editor-theme = { path = "../crates/editor-theme" }
toml = "0.8.23"

[dev-dependencies]
editor-buffer = { path = "../crates/editor-buffer" }
