[package]
name = "volt-user"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "user"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
editor-plugin-api = { path = "../crates/editor-plugin-api" }
toml = "0.8.23"

[dev-dependencies]
editor-buffer = { path = "../crates/editor-buffer" }
editor-syntax = { path = "../crates/editor-syntax" }
