[package]
name = "volt-user"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "user"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
abi_stable = "0.11"
editor-core = { path = "../crates/editor-core" }
editor-fs = { path = "../crates/editor-fs" }
editor-git = { path = "../crates/editor-git" }
editor-icons = { path = "../crates/editor-icons" }
editor-plugin-api = { path = "sdk" }
editor-syntax = { path = "../crates/editor-syntax" }
editor-theme = { path = "../crates/editor-theme" }
toml = "0.8.23"

[dev-dependencies]
editor-buffer = { path = "../crates/editor-buffer" }
editor-syntax = { path = "../crates/editor-syntax" }
