[package]
name = "editor-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
editor-buffer = { path = "../editor-buffer" }
editor-jobs = { path = "../editor-jobs" }
editor-path = { path = "../editor-path" }
lsp-types = "0.97.0"
serde = "1.0.228"
serde_json = "1.0.149"

