[package]
name = "editor-sdl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
doctest = false
test = false

[lints]
workspace = true

[dependencies]
editor-buffer = { path = "../editor-buffer" }
editor-core = { path = "../editor-core" }
editor-fs = { path = "../editor-fs" }
editor-git = { path = "../editor-git" }
editor-icons = { path = "../editor-icons" }
editor-jobs = { path = "../editor-jobs" }
editor-lsp = { path = "../editor-lsp" }
editor-picker = { path = "../editor-picker" }
editor-plugin-api = { path = "../../user/sdk" }
editor-plugin-host = { path = "../editor-plugin-host" }
editor-render = { path = "../editor-render" }
editor-syntax = { path = "../editor-syntax" }
editor-terminal = { path = "../editor-terminal" }
editor-theme = { path = "../editor-theme" }
sdl3 = { version = "0.17.3", features = ["build-from-source-static", "build-from-source-unix-console", "ttf", "raw-window-handle"] }
image = { version = "0.25.1", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
base64 = "0.22.1"
fontdue = "0.9.3"
rustybuzz = "0.20.1"
sdl3-ttf-sys = { version = "0.6.0", features = ["no-sdlttf-harfbuzz"] }
agent-client-protocol = { version = "0.10.2", features = ["unstable_session_model"] }
tokio = { version = "1.50.0", features = ["rt", "sync", "process", "io-util"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
async-trait = "0.1.89"
notify = "8.2.0"
resvg = "0.47.0"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
wry = { version = "0.53", features = ["devtools"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[dev-dependencies]
user = { package = "volt-user", path = "../../user" }
