[package]
name = "editor-terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "9d9640d4", version = "0.25.1" }
editor-jobs = { path = "../editor-jobs" }
