[package]
name = "volt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[lints]
workspace = true

[dependencies]
editor-buffer = { path = "../editor-buffer" }
editor-core = { path = "../editor-core" }
editor-dap = { path = "../editor-dap" }
editor-fs = { path = "../editor-fs" }
editor-git = { path = "../editor-git" }
editor-jobs = { path = "../editor-jobs" }
editor-lsp = { path = "../editor-lsp" }
editor-picker = { path = "../editor-picker" }
editor-plugin-host = { path = "../editor-plugin-host" }
editor-sdl = { path = "../editor-sdl" }
editor-syntax = { path = "../editor-syntax" }
editor-terminal = { path = "../editor-terminal" }
editor-theme = { path = "../editor-theme" }
user = { package = "volt-user", path = "../../user" }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.5.1"
