[package]
name = "volt-user"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
build = "build.rs"

[lib]
name = "user"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[dependencies]
editor-core = { path = "vendor/editor-core" }
editor-fs = { path = "vendor/editor-fs" }
editor-git = { path = "vendor/editor-git" }
editor-icons = { path = "vendor/editor-icons" }
editor-plugin-api = { path = "sdk" }
editor-syntax = { path = "vendor/editor-syntax" }
editor-theme = { path = "vendor/editor-theme" }
toml = "0.8.23"

[dev-dependencies]
editor-buffer = { path = "vendor/editor-buffer" }
editor-syntax = { path = "vendor/editor-syntax" }
