[package]
name = "editor-plugin-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[dependencies]
abi_stable = "0.11"
editor-core = { path = "../vendor/editor-core" }
editor-dap = { path = "../vendor/editor-dap" }
editor-fs = { path = "../vendor/editor-fs" }
editor-git = { path = "../vendor/editor-git" }
editor-icons = { path = "../vendor/editor-icons" }
editor-lsp = { path = "../vendor/editor-lsp" }
editor-syntax = { path = "../vendor/editor-syntax" }
editor-theme = { path = "../vendor/editor-theme" }
